# style-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: run_local.sh  validate_env.py
src/: main.py
src/agents/: __init__.py  caricature_agent.py  grooming_agent.py  product_catalogue_agent.py  profile_builder.py  recommendation_agent.py  style_agent.py  vision_agent.py
src/fashion_knowledge/: __init__.py  accessory_guide.py  body_types.py  color_theory.py  fabric_guide.py  footwear_guide.py  grooming_guide.py  indian_wear.py  proportion_theory.py  seasonal_color.py  style_archetypes.py  trends.py  trends_2025.json  western_wear.py
src/models/: __init__.py  accessories.py  footwear.py  grooming.py  outfit.py  product.py  recommendation.py  remark.py  user_profile.py
src/output/: __init__.py  formatter.py  renderer.py
src/prompts/: __init__.py  outfit_analysis.py  profile_analysis.py  recommendations.py
src/services/: __init__.py  anthropic_service.py  image_service.py  replicate_service.py
src/storage/: __init__.py  history_store.py  profile_store.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_accessory_guide.py  test_body_types.py  test_caricature_agent.py  test_color_theory.py  test_footwear_guide.py  test_grooming_agent.py  test_grooming_guide.py  test_image_service.py  test_indian_wear.py  test_models.py  test_product_catalogue_agent.py  test_profile_builder.py  test_proportion_theory.py  test_recommendation_agent.py  test_renderer.py  test_seasonal_color.py  (+4 more)
