[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "style-agent"
version = "0.1.0"
description = "AI personal stylist"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
# Adds project root to sys.path so `from src.x import y` works everywhere
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
